kubernetes/01-deployment.yaml
# Backend - Air Quality Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: air-quality-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: air-quality-service
  template:
    metadata:
      labels:
        app: air-quality-service
    spec:
      containers:
        - name: air-quality-service
          image: gcr.io/helical-loop-453001-c0/air-quality-service:latest
          ports:
            - containerPort: 8001
          volumeMounts:
            - name: firebase-service-account
              mountPath: /secrets
              readOnly: true
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
      volumes:
        - name: firebase-service-account
          secret:
            secretName: firebase-service-accounts
            items:
              - key: firestore_key.json
                path: firestore_key.json
              - key: firebase_console_key.json
                path: firebase_console_key.json

---
apiVersion: v1
kind: Service
metadata:
  name: air-quality-service
spec:
  selector:
    app: air-quality-service
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001

# Frontend - React + NGINX
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gcr.io/helical-loop-453001-c0/frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
