kubernetes/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: air-quality-service
spec:
  type: LoadBalancer
  ports:
  - port: 8001
    targetPort: 8001
  selector:
    app: air-quality-service
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontend
